--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "auth0-nodejs-webapp-sample-new-test",
-  "version": "0.0.0",
-  "private": true,
+  "name": "iamcest-dashboard",
+  "version": "0.0.1",
+  "private": false,
   "scripts": {
     "start": "node ./bin/www"
   },
