--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": false,
   "scripts": {
-    "start": "node ./bin/www"
+  "start": "node server.js"
   },
   "dependencies": {
     "connect-flash": "^0.1.1",
