--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.1",
   "private": false,
   "scripts": {
-  "start": "node server.js"
-  },
+    "start": "node server.js",
+    "dev": "nodemon server.js
+}
   "dependencies": {
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.5",
