--- a/package.json
+++ b/package.json
@@ -1,22 +1,21 @@
 {
-  "name": "iamcest-dashboard",
+  "name": "iamcest-dashbord-login",
   "version": "0.0.1",
-  "private": false,
+  "private": true,
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js
-    
+    "start": "node ./bin/www"
+  },
   "dependencies": {
-    "connect-flash": "^0.1.1",
-    "cookie-parser": "^1.4.5",
-    "debug": "~4.1.1",
-    "dotenv": "^8.2.0",
-    "express": "~4.17.1",
-    "express-session": "^1.17.1",
-    "http-errors": "~1.7.3",
-    "morgan": "~1.10.0",
-    "passport": "^0.4.1",
-    "passport-auth0": "^1.3.2",
-    "pug": "^2.0.4"
+    "connect-flash": "0.1.1",
+    "cookie-parser": "1.4.5",
+    "debug": "4.1.1",
+    "dotenv": "8.2.0",
+    "express": "4.17.1",
+    "express-session": "1.17.1",
+    "http-errors": "1.7.3",
+    "morgan": "1.10.0",
+    "passport": "0.4.1",
+    "passport-auth0": "1.3.2",
+    "pug": "2.0.4"
   }
 }
