--- a/auth_config.json
+++ b/auth_config.json
@@ -1,4 +1,5 @@
 {
   "domain": "dev-6jybmukq.auth0.com",
-  "clientId": "cbxq0pK0RT5kWB6XaZQFlZpP5mcfWKJp"
+  "clientId": "cbxq0pK0RT5kWB6XaZQFlZpP5mcfWKJp",
+  "clientsecret": "rPyjVAftHLs_ThvL9gB9YNPcnYd_rKr4gtsnLxKwxi46TBvu7eLgzSS3mpoybE89"  
 }
